# NumericalMethods

./: stdafx.h
NumMethods/LinearEquations/Iterative/: DownRelaxtion.h  Seidel.h
NumMethods/TestMethods/: testLinearEquation.h
NumericalMethods-main/: CMakeLists.txt  main.cpp
NumericalMethods-main/NumMethods/LinearEquations/Iterative/: DownRelaxtion.h  Seidel.h
NumericalMethods-main/NumMethods/TestMethods/: testLinearEquation.h
